# kconfig-bazel

./: .bazelrc  .config  .gitignore  .gitignore.swp  BUILD.bazel  Kconfig  MODULE.bazel  bazel_config.py  feature_cc_library.bzl  kconfig.BUILD  kconfig.bzl  prj1.BUILD  prj1.conf  prj2.BUILD  prj2.conf  requirements.txt  settings.bzl
include/: myfeatures.h
src/: feature1.cc  feature2.cc  main.cc
