# load("@pip//:requirements.bzl", "entry_point")
# alias(
#   name = "menuconfig",
#   actual = entry_point("menuconfig"),
# )

# genrule(
#   name = "config",
#   srcs = [":Kconfig"],
#   outs = [".config"],
#   cmd = "KCONFIG_CONFIG=\"$@\" menuconfig $(SRCS)",
#   visibility = ["//visibility:public"],
# )

# load("@bazel_skylib//rules:common_settings.bzl", "label_flag")

# feature_cc_library(
#   name = "int_value_cc",
#   flag = "@kconfig//:CONFIG_INT_VALUE",
# )
# feature_cc_library(
#   name = "feature1_cc",
#   flag = "@kconfig//:CONFIG_FEATURE1",
# )
# feature_cc_library(
#   name = "feature2_cc",
#   flag = "@kconfig//:CONFIG_FEATURE2",
# )

cc_binary(
    name = "app",
    srcs = [
      "src/main.cc",
      "include/myfeatures.h",
    ] + select({
      "//conditions:default": [],
      "@kconfig//:CONFIG_FEATURE1=true": ["src/feature1.cc"],
    }) + select({
      "//conditions:default": [],
      "@kconfig//:CONFIG_FEATURE2=true": ["src/feature2.cc"],
    }),
    deps = [
      "@kconfig//:autoconf",
    ],
    copts = ["-include autoconf.h"],
    includes = ["include"],
)

platform(
  name = "prj1",
  parents = ["@prj1//:platform"],
)

platform(
  name = "prj2",
  parents = ["@prj2//:platform"],
)
