cc_binary(
    name = "app",
    srcs = [
      "src/main.cc",
      "include/myfeatures.h",
    ] + select({
      "//conditions:default": [],
      "@kconfig//:CONFIG_FEATURE1=true": ["src/feature1.cc"],
    }) + select({
      "//conditions:default": [],
      "@kconfig//:CONFIG_FEATURE2=true": ["src/feature2.cc"],
    }),
    deps = [
      "@kconfig//:autoconf",
    ],
    copts = ["-include autoconf.h"],
    includes = ["include"],
)

platform(
  name = "prj1",
  parents = ["@prj1//:platform"],
)

platform(
  name = "prj2",
  parents = ["@prj2//:platform"],
)
