load("@prj1//:kconfig_flag_values.bzl", PRJ1_KCONFIG_FLAGS = "KCONFIG_FLAGS")
load("@prj2//:kconfig_flag_values.bzl", PRJ2_KCONFIG_FLAGS = "KCONFIG_FLAGS")
cc_binary(
    name = "app",
    srcs = [
      "src/main.cc",
      "include/myfeatures.h",
    ] + select({
      "//conditions:default": [],
      "@kconfig//:CONFIG_FEATURE1=true": ["src/feature1.cc"],
    }) + select({
      "//conditions:default": [],
      "@kconfig//:CONFIG_FEATURE2=true": ["src/feature2.cc"],
    }),
    deps = [
      "@kconfig//:autoconf",
    ],
    copts = ["-include autoconf.h"],
    includes = ["include"],
)

platform(
  name = "prj1",
  parents = ["@platforms//host"],
  flags = PRJ1_KCONFIG_FLAGS,
)

platform(
  name = "prj2",
  parents = ["@platforms//host"],
  flags = PRJ2_KCONFIG_FLAGS,
)
